infra/k8s/aggregator-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator
  template:
    metadata:
      labels:
        app: aggregator
    spec:
      containers:
        - image: aggregator-service
          name: aggregator-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator-cluster-ip-srv
spec:
  selector:
    app: aggregator
  ports:
    - name: aggregator-service
      protocol: TCP
      port: 3000
      targetPort: 3000
