infra/k8s/dashboard-pub-sub-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-pub-pub-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-pub-sub
  template:
    matadata:
      app: dashboard-pub-sub
    spec:
      containers:
        - image: redis
          name: dashboard-pub-sub-service
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-pub-sub-cluster-ip-srv
spec:
  selector:
    app: dashboard-pub-sub
  ports:
    - name: dashboard-pub-sub-service
      protocol: TCP
      port: 6379
      targetPort: 6379
