infra/k8s/dashboard-wss-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-wss-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-wss
  template:
    metadata:
      labels:
        app: dashboard-wss
    spec:
      containers:
        - image: dashboard-wss-service
          name: dashboard-wss-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-wss-cluster-ip-srv
spec:
  selector:
    app: dashboard-wss
  ports:
    - name: dashboard-wss-service
      protocol: TCP
      port: 3000
      targetPort: 3000
