infra/k8s/visitor-wss-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitor-wss-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visitor-wss
  template:
    metadata:
      labels:
        app: visitor-wss
    spec:
      containers:
        - image: visitor-wss-service
          name: visitor-wss-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: visitor-wss-cluster-ip-srv
spec:
  selector:
    app: visitor-wss
  ports:
    - name: visitor-wss-service
      protocol: TCP
      port: 3000
      targetPort: 3000
