infra/k8s/visitorwss-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitorwss-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visitorwss
  template:
    metadata:
      labels:
        app: visitorwss
    spec:
      containers:
        - image: visitorwss-service
          name: visitorwss-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: visitorwss-cluster-ip-srv
spec:
  selector:
    app: visitorwss
  ports:
    - name: visitorwss-service
      protocol: TCP
      port: 3000
      targetPort: 3000
