infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: analytiq.in
      http:
        paths:
          - path: /api/v1/aggregator/?(.*)
            pathType: Prefix
            backend:
              service:
                name: aggregator-cluster-ip-srv
                port:
                  number: 3000
          - path: /api/v1/visitorwss/?(.*)
            pathType: Prefix
            backend:
              service:
                name: visitorwss-cluster-ip-srv
                port:
                  number: 3000
